projects/gnomad/deploy/gnomad-deployment-prod.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: gnomad-p-serve
  labels:
    state: serving
spec:
  replicas: 2
  selector:
    matchLabels:
      name: gnomad-p-serve
  template:
    metadata:
      labels:
        name: gnomad-p-serve
    spec:
      volumes:
      - name: readviz
        gcePersistentDisk:
          pdName: gnomad-readviz-exons-gpd-3
          fsType: ext4
          readOnly: true
      containers:
      - name: gnomad-d-serve
        image: gcr.io/exac-gnomad/gnomad-browser-beta
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: readviz
          mountPath: /var/data/readviz
        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
        imagePullPolicy: Always
      restartPolicy: Always
      dnsPolicy: ClusterFirst
