projects/gnomad/deploy/gnomad-legacy-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: gnomad-p-serve
  labels:
    state: serving
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gnomad-p-app
  template:
    metadata:
      labels:
        name: gnomad-p-app
    spec:
      # volumes:
      # - name: gnomad-d-readviz-exons-vol-1
      #   gcePersistentDisk:
      #     pdName: gnomad-readviz-exons-gpd
      #     fsType: ext4
      #     readOnly: true
      containers:
      - name: gnomad-p-serve
        image: gcr.io/exac-gnomad/gnomad-legacy:1508166941
        ports:
        - containerPort: 80
          protocol: TCP
        # volumeMounts:
        # - name: gnomad-d-readviz-exons-vol-1
        #   mountPath: /var/data/readviz
        securityContext:
          privileged: true
          capabilities:
            add:
            - NET_ADMIN
        imagePullPolicy: Always
      restartPolicy: Always
      dnsPolicy: ClusterFirst
